# capstone

./: .gitignore  CMakeLists.txt  CMakelists.txt  Customer.cpp  Customer.h  MachineLearning.md  Main.cpp  README.md
app-ui/: build.gradle
app-ui/cpp/include/: service_TradingServiceJNI.h
app-ui/cpp/src/: TradingServiceJNI.cpp
app-ui/src/service/: TradingServiceJNI.java
app-ui/src/ui/: MainWindow.java  OrderDialog.java  StrategyDialog.java
data/: AAPL_prices.csv  MSFT_prices.csv  orders.json  pl.json  pl_report.csv  portfolio.json
include/: BollingerBandsStrategy.h  BreakoutStrategy.h  DataPersistence.h  MarketDataFeed.h  MeanReversionStrategy.h  MomentumStrategy.h  MovingAverageCrossoverStrategy.h  Order.h  OrderExecutor.h  Portfolio.h  ProfitLoss.h  PyTorchBridge.h  RSIStrategy.h  StrategyManager.h  Trade.h  TradingEngine.h  TradingStrategy.h  Utils.h
python/: Algorithmic_Trading_Machine_Learning.ipynb  Algorithmic_Trading_Machine_Learning_01.ipynb  CE301_20241107.ipynb  ce301_python01.ipynb
python_ml/: data_loader.py  data_loader_regression.py  inference.py  inference_regressor.py  requirements.txt  train_model.py  train_price_regressor.py  train_pytorch.py
python_ml/models/: AAPL_rf.joblib
python_ml/models/AAPL/: AAPL_lstm.pt  AAPL_regressor.joblib  AAPL_rf.joblib  AAPL_scaler.joblib  AAPL_scaler.json  AAPL_signal.csv
python_ml/models/MSFT/: MSFT_regressor.joblib
src/: BollingerBandsStrategy.cpp  BreakoutStrategy.cpp  DataPersistence.cpp  Main.cpp  MarketDataFeed.cpp  MeanReversionStrategy.cpp  MomentumStrategy.cpp  MovingAverageCrossoverStrategy.cpp  Order.cpp  OrderExecutor.cpp  Portfolio.cpp  PyTorchBridge.cpp  RSIStrategy.cpp  StrategyManager.cpp  Trade.cpp  TradingEngine.cpp  TradingStrategy.cpp  Utils.cpp
